2003-06-03  Uwe Pross  <uwe.pross@gmx.net>

	* web-theme/themes/theme_descriptions.inc: 
	* web-theme/themes/plain_theme.inc: 
	* web-theme/classes/plain_class.inc:
	Made foreground and background of plain theme customizeable.

	* customize_theme/theme_descriptions_helper.inc: 
	Fixed propagation of theme variable when using propagation
	method GET.

	* logo-competition/logos/color_select.inc: 
	Made color selection possible for other themes.

2003-06-03  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* logo-competition/logos/color_select.inc: 
	Disabled color selection for all themes except birthday theme.

	* logo-competition/logos_new.php:
	Added Scott Smedley's logos

2003-06-02  Uwe Pross  <uwe.pross@gmx.net>

	* index.php: 
	Added link to download page. Used new function mylink.

	* web-theme/helpers/members2globals.inc: 
	added function mylink($target, $text, $opt="") to get simpler
	internal links.

	* web-theme/classes/birthday_class.inc: 
	disabled cookies and session for birthday theme.

2003-06-02  Mikhael Goikhman  <migo@homemail.com>

	* logo-competition/logos/Felix_E_Klee/index.php:
	* logo-competition/logos_new.php:
	disabled the Felix logos for now; other small changes

	* logo-competition/logos_new.php:
	restored Coji Morishita entry

2003-06-02  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* birthday/index.php:
	Corrected typo.
	
	* logo-competition/logos/Felix_E_Klee/index.php
	* web-theme/classes/birthday_class.inc
	* web-theme/themes/theme_descriptions.inc
	Background color change for the birthday theme possible.
	
	* logo-competition/logos_new.php: 
	Provided images sizes.

2003-06-01  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos/Felix_E_Klee/index.php: 
	Added logos by Felix E. Klee

	* web-theme/classes/birthday_class.inc: 
	* web-theme/classes/default_class.inc:
	* web-theme/themes/plain_theme.inc:
	Added link to switch theme.

2003-05-31  Mikhael Goikhman  <migo@homemail.com>

	* **.html:
	* generated/txt2html.sh: